--- a/web_dnd/web_game/templates/index.html
+++ b/web_dnd/web_game/templates/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-
-      <link href="./css/main.css" rel="stylesheet" />
+      <link href="./static/css/main.css" rel="stylesheet" />
       <title>Document</title>
    </head>
    <body>
