--- a/view/index.html
+++ b/view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link href="./static/css/main.css" rel="stylesheet" />
+      <link href="./main.css" rel="stylesheet" />
       <title>Document</title>
    </head>
    <body>
@@ -9,19 +9,17 @@
          <div class="head_menu">
             <span class="someText">Подземелья и Приколы</span>
          </div>
-
          <div class="game_field">
             <button style="
             font-size: 20pt;
             padding: 10pt;
             ">xdd</button>
-            <span class="someText">игровая область</span>
+            <span class="someText">Игровая область</span>
             <!-- <div id="circle"></div>
                <script src="script.js"></script> -->
          </div>
-
          <div class="main_menu">
-            <span class="someText">меню</span>
+            <span class="someText">Меню</span>
          </div>
       </div>
       
