--- a/web_dnd/static/css/main.css
+++ b/web_dnd/static/css/main.css
@@ -34,6 +34,7 @@ body {
   margin-top: 10pt;
   overflow: auto;
 }
+
 .main_menu {
   width: 20%;
   height: 100%;
@@ -44,9 +45,27 @@ body {
   right: 0;
   overflow: hidden;
 }
+
 .someText{
   color: rgba(0,0,0,1);
   position: absolute;
   padding: 20pt;
   font-size: 50px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 50px);
+  grid-gap: 0;
+  grid-auto-flow: row;
+  min-height: 50px;
+  border: 2px solid black;
+  position: relative;
+}
+
+.square {
+  width: 50px;
+  height: 50px;
+  background-color: lightblue;
+  border: 1px solid black;
 }
