--- a/web_dnd/web_game/templates/index.html
+++ b/web_dnd/web_game/templates/index.html
@@ -3,6 +3,7 @@
    <head>
       <link href="./static/css/main.css" rel="stylesheet" />
       <title>Document</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
    </head>
    <body>
       <div class="backgr">
@@ -11,10 +12,10 @@
          </div>
 
          <div class="game_field">
+            <div class="someText">Игровая область</div>
             <div class="grid">
             </div>
             <script src="./static/css/script.js"></script>
-            <span class="someText">игровая область</span>
          </div>
 
          <div class="main_menu">
