--- a/web_dnd/static/css/main.css
+++ b/web_dnd/static/css/main.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   padding: 0;
   font-size: 66px;
+  font-family: Montserrat;
+  font-style: bold; /*подправить*/
 }
 .backgr {
   background: rgb(255, 255, 255);
@@ -19,7 +21,7 @@ body {
 }
 
 .head_menu {
-  width: 80%;
+  width: 1254px;
   height: 25%;
   background: rgba(217,217,217,1);
   opacity: 1;
@@ -27,7 +29,7 @@ body {
 }
 
 .game_field {
-  width: 80%;
+  width: 1254px;
   height: 100%;
   background: rgba(217,217,217,1);
   opacity: 1;
@@ -42,7 +44,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 0;
-  right: 0;
+  right: 0px;
   overflow: hidden;
 }
 
@@ -55,11 +57,12 @@ body {
 
 .grid {
   display: grid;
+  margin-top: 85pt;
   grid-template-columns: repeat(auto-fill, 50px);
   grid-gap: 0;
   grid-auto-flow: row;
-  min-height: 50px;
-  border: 2px solid black;
+  min-height: 0px;
+  border: 2px solid black; /*при бордер = 1 виден фоновый грид, который меняет цвет при нажатии*/
   position: relative;
 }
 
@@ -67,5 +70,5 @@ body {
   width: 50px;
   height: 50px;
   background-color: lightblue;
-  border: 1px solid black;
+  border: 2px solid black;
 }
