--- a/web_dnd/web_game/templates/index.html
+++ b/web_dnd/web_game/templates/index.html
@@ -8,11 +8,11 @@
    <body>
       <div class="backgr">
          <div class="head_menu">
-            <span class="someText">Подземелья и Приколы</span>
+            <span class="someText" id="Game">Подземелья и Приколы</span>
          </div>
 
          <div class="game_field">
-            <div class="someText">Игровая область</div>
+            <!--<div class="someText">Игровая область</div>-->
             <div class="grid">
             </div>
             <script src="./static/css/script.js"></script>
