--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper lectus odio. Aliquam tempor gravida augue at tincidunt. Maecenas faucibus enim ac rhoncus consectetur. Vestibulum efficitur sem id lacus blandit congue. Donec vitae felis vel orci porttitor elementum vel id urna. Aliquam auctor quam a urna commodo, a pellentesque arcu efficitur. Mauris nec augue posuere, eleifend tellus nec, pharetra sapien. Quisque porttitor, mauris eget luctus cursus, nulla lacus feugiat diam, vel hendrerit nisi leo vitae lacus. Maecenas consectetur risus eros, et consectetur lorem commodo venenatis. Integer vitae dui dignissim lacus placerat accumsan. Vivamus quis lectus ut arcu accumsan lobortis sed non sem. Vivamus ac vestibulum nisl. Vestibulum luctus velit vitae enim fermentum, in laoreet augue tincidunt. Donec nunc dui, consectetur sit amet leo eu, egestas viverra orci. Pellentesque fermentum, nisi vitae cursus iaculis, diam odio sodales odio, sed efficitur turpis tellus vel felis. Pellentesque auctor urna ac mi vehicula elementum.</p>
          <button onclick='btn_check()' style="font-size: 20pt; padding: 10pt;">меню</button>
       </div>
-   </body>https://meet.google.com/cra-hwco-ras
+   </body>
 
    <script>
       var navToggled = true;
